fixing css spacing for my first name to fit

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -52,7 +52,7 @@ a:hover,
 }
 
 header {
-  width: 162px;
+  width: 175px;
   border-right: 1px solid #DDD;
   position: fixed;
   top: 0;
@@ -92,7 +92,7 @@ header {
 }
 
 #container {
-  margin-left: 243px;
+  margin-left: 255px;
   position: relative;
 
   time {
